Svelte and React templates, lazy pages fix, adminBar page prop and improved Vue template files #minor

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,6 +116,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Fetch and checkout the latest commit
+        run: |
+          git fetch origin main
+          git checkout origin/main
+
       - uses: pnpm/action-setup@v2
         with:
           version: 9
