--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "type": "module",
     "scripts": {
         "admin": "pnpm --stream --if-present -r --filter './development/admin' dev",
-        "admin:build": "pnpm --stream --if-present -r --filter './development/admin' build"
+        "admin:build": "pnpm --stream --if-present -r --filter './development/admin' build",
+        "prepare": "husky install"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
     "devDependencies": {
+        "@eslint/js": "^9.17.0",
+        "eslint": "^9.17.0",
+        "eslint-config-prettier": "^9.1.0",
+        "globals": "^15.14.0",
+        "husky": "^8.0.0",
+        "lint-staged": "^15.2.11",
+        "prettier": "^3.4.2",
         "vite": "^6.0.5"
     },
     "dependencies": {
