--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,6 +13,10 @@ jobs:
     permissions:
       contents: write
     steps:
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 9
+
       - name: Use Node.js 22
         uses: actions/setup-node@v4
         with:
