--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "globals": "^15.14.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
+    "postcss": "^8.4.49",
+    "postcss-nested": "^7.0.2",
     "prettier": "^3.4.2",
     "vite": "^6.0.5",
     "vitepress": "^1.5.0"
