--- a/resources/plugins/package.json
+++ b/resources/plugins/package.json
@@ -24,15 +24,41 @@
     },
     "scripts": {
         "build": "vite build",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "clean": "rm -rf dist"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependencies": {
-        "vite": "^6.0.3"
-    },
     "peerDependencies": {
-        "@inertiajs/vue3": "^2.0.0"
+        "@inertiajs/vue3": "^2.0.0",
+        "@inertiajs/react": "^2.0.0",
+        "@inertiajs/svelte": "^2.0.0",
+        "@vueuse/core": "^12.0.0",
+        "vue": "^3.5.0",
+        "react": "^19.0.0",
+        "svelte": "^5.0.0"
+    },
+    "peerDependenciesMeta": {
+        "@inertiajs/vue3": {
+            "optional": true
+        },
+        "@inertiajs/react": {
+            "optional": true
+        },
+        "@inertiajs/svelte": {
+            "optional": true
+        },
+        "@vueuse/core": {
+            "optional": true
+        },
+        "vue": {
+            "optional": true
+        },
+        "react": {
+            "optional": true
+        },
+        "svelte": {
+            "optional": true
+        }
     }
 }
