--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-  "name": "inertia-wordpress",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "admin": "pnpm --stream --if-present -r --filter './development/admin' dev",
-    "admin:build": "pnpm --stream --if-present -r --filter './development/admin' build",
-    "prepare": "husky install",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
-    "globals": "^15.14.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.3.0",
-    "postcss": "^8.4.49",
-    "postcss-nested": "^7.0.2",
-    "prettier": "^3.4.2",
-    "vite": "^6.0.6",
-    "vitepress": "^1.5.0"
-  },
-  "dependencies": {
-    "@mdi/js": "^7.4.47"
-  }
+    "name": "inertia-wordpress",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "admin": "pnpm --stream --if-present -r --filter './development/admin' dev",
+        "admin:build": "pnpm --stream --if-present -r --filter './development/admin' build",
+        "prepare": "husky install",
+        "docs:dev": "vitepress dev docs --host",
+        "docs:build": "vitepress build docs",
+        "docs:preview": "vitepress preview docs"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
+    "devDependencies": {
+        "@eslint/js": "^9.17.0",
+        "eslint": "^9.17.0",
+        "eslint-config-prettier": "^9.1.0",
+        "globals": "^15.14.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.3.0",
+        "postcss": "^8.4.49",
+        "postcss-nested": "^7.0.2",
+        "prettier": "^3.4.2",
+        "vite": "^6.0.7",
+        "vitepress": "^1.5.0"
+    },
+    "dependencies": {
+        "@mdi/js": "^7.4.47"
+    }
 }
