--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,13 @@
         "yahnis-elsts/plugin-update-checker": "^5.5"
     },
     "require-dev": {
-        "symfony/var-dumper": "^7.2",
+        "friendsofphp/php-cs-fixer": "^3.65",
         "php-stubs/wordpress-stubs": "^6.3",
+        "php-stubs/wordpress-tests-stubs": "^6.7",
         "php-stubs/wp-cli-stubs": "^2.8",
-        "friendsofphp/php-cs-fixer": "^3.65"
+        "phpunit/phpunit": "^9.0",
+        "symfony/var-dumper": "^7.2",
+        "yoast/phpunit-polyfills": "^3.0"
     },
     "autoload": {
         "psr-4": {
