--- a/package.json
+++ b/package.json
@@ -1,35 +1,35 @@
 {
-    "name": "inertia-wordpress",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "type": "module",
-    "scripts": {
-        "admin": "pnpm --stream --if-present -r --filter './development/admin' dev",
-        "admin:build": "pnpm --stream --if-present -r --filter './development/admin' build",
-        "prepare": "husky install",
-        "docs:dev": "vitepress dev docs --host",
-        "docs:build": "vitepress build docs",
-        "docs:preview": "vitepress preview docs"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
-    "devDependencies": {
-        "@eslint/js": "^9.20.0",
-        "eslint": "^9.20.0",
-        "eslint-config-prettier": "^10.0.1",
-        "globals": "^15.14.0",
-        "husky": "^9.1.7",
-        "lint-staged": "^15.4.3",
-        "postcss": "^8.5.1",
-        "postcss-nested": "^7.0.2",
-        "prettier": "^3.5.0",
-        "vite": "^6.1.0",
-        "vitepress": "^1.6.3"
-    },
-    "dependencies": {
-        "@mdi/js": "^7.4.47"
-    }
+	"name": "inertia-wordpress",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"admin": "pnpm --stream --if-present -r --filter './development/admin' dev",
+		"admin:build": "pnpm --stream --if-present -r --filter './development/admin' build",
+		"docs:dev": "vitepress dev docs --host",
+		"docs:build": "vitepress build docs",
+		"docs:preview": "vitepress preview docs",
+		"prepare": "husky"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
+	"devDependencies": {
+		"@eslint/js": "^9.20.0",
+		"eslint": "^9.20.1",
+		"eslint-config-prettier": "^10.0.1",
+		"globals": "^15.15.0",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.4.3",
+		"postcss": "^8.5.2",
+		"postcss-nested": "^7.0.2",
+		"prettier": "^3.5.1",
+		"vite": "^6.1.0",
+		"vitepress": "^1.6.3"
+	},
+	"dependencies": {
+		"@mdi/js": "^7.4.47"
+	}
 }
