--- a/resources/plugins/package.json
+++ b/resources/plugins/package.json
@@ -33,7 +33,7 @@
         "@inertiajs/vue3": "^2.0.0",
         "@inertiajs/react": "^2.0.0",
         "@inertiajs/svelte": "^2.0.0",
-        "@vueuse/core": "^12.0.0",
+        "@vueuse/core": "^12.0.0 || ^13.0.0",
         "vue": "^3.5.0",
         "react": "^19.0.0",
         "svelte": "^5.0.0"
